# zokrates-api

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.local  Dockerfile.prod  README.md  Rocket.toml  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug-report-.md  feature_request.md
.github/workflows/: build.yaml  lint-and-test.yaml
src/: lib.rs  main.rs  ops.rs  routes.rs
src/ops/: compilation.rs  proof.rs  witness.rs
src/routes/: compile.rs  compute_generate_proof.rs  compute_witness.rs  generate_proof.rs  health.rs  proving_key.rs
src/utils/: config.rs  errors.rs
tests/: abi.json  false_witness  proving.key  test  test.zok  witness
