[package]
name = "zokrates_api"
version = "0.1.0"
edition = "2021"
authors = ["Alvaro Alonso Domenech <https://github.com/alvaro-alonso>"]
repository = "https://github.com/ZoKratesPlus/zokrates-api"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4"
typed-arena = "1.4.1"
sha2 = "0.10"

# zokrates
zokrates_core = { version = "0.7", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_core", default-features = false }
zokrates_ast = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_ast", default-features = false }
zokrates_field = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_field", default-features = false }
zokrates_interpreter = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_interpreter",default-features = false }
zokrates_fs_resolver = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace="zokrates_fs_resolver" }
zokrates_circom = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace="zokrates_circom" }
zokrates_proof_systems = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_proof", default-features = false }
zokrates_ark = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_ark", default-features = false }
zokrates_common = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", tag = "0.8.8", workspace = "zokrates_common", default-features = false }

# open-api
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger"] }